fix: text overflow on box hover for small screens

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -215,7 +215,7 @@ footer {
 }
 .box:hover {
    color: white;
-   font-size: xx-large;
+   font-size: 100%;
    background-color: #6b06b8;
 }
 .post-count {
